--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "joi": "^17.6.2"
+    "joi": "^17.6.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.24.0"
   }
 }
