--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
+    "convict": "^6.2.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "joi": "^17.6.2",
