add production script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "npm run test",
-    "start": "node app.js",
+    "prod": "NODE_ENV='production' node app.js",
     "lint": "eslint . --fix",
     "dev": "nodemon app.js"
   },
