--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "dependencies": {
     "convict": "^6.2.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "joi": "^17.6.2",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
   }
