--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repo follow the node course by mosh hamedani",
   "main": "app.js",
   "scripts": {
-    "test": "npm run test",
+    "test": "jest --watchAll",
     "prod": "NODE_ENV='production' node app.js",
     "lint": "eslint . --fix",
     "dev": "nodemon app.js"
@@ -21,9 +21,12 @@
   "homepage": "https://github.com/amk837/node-practice#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.2.0",
+    "supertest": "^6.3.0"
   },
   "dependencies": {
     "convict": "^6.2.3",
