--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
